--- a/Pandas/Pandas_Intro.ipynb
+++ b/Pandas/Pandas_Intro.ipynb
@@ -1227,7 +1227,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "91d73c2c",
+   "id": "72922bcc",
    "metadata": {},
    "outputs": [
     {
@@ -1396,7 +1396,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "3f7fff6f",
+   "id": "36d3836a",
    "metadata": {},
    "outputs": [
     {
@@ -1418,7 +1418,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "1c5457f6",
+   "id": "5c90be06",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1428,7 +1428,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "492420cb",
+   "id": "7f1733d7",
    "metadata": {},
    "outputs": [
     {
@@ -1452,7 +1452,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "350ccc6e",
+   "id": "4eb0499d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1463,7 +1463,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "9fefb4bc",
+   "id": "7f8caa14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1477,7 +1477,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "93ea5ee4",
+   "id": "10466142",
    "metadata": {},
    "outputs": [
     {
@@ -1631,7 +1631,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "cca89dca",
+   "id": "8062be2d",
    "metadata": {},
    "outputs": [
     {
@@ -1657,7 +1657,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "6106f41f",
+   "id": "2bdfb50b",
    "metadata": {},
    "outputs": [
     {
@@ -1764,7 +1764,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "a24ba3f1",
+   "id": "acfcbe93",
    "metadata": {
     "scrolled": true
    },
@@ -1908,7 +1908,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "6c402cbf",
+   "id": "be34220c",
    "metadata": {},
    "outputs": [
     {
@@ -2257,7 +2257,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "5c8c26dd",
+   "id": "3a30c4d6",
    "metadata": {},
    "outputs": [
     {
@@ -2412,7 +2412,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "f1e80515",
+   "id": "a39220ea",
    "metadata": {},
    "outputs": [
     {
@@ -2440,7 +2440,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "a1d0d44a",
+   "id": "25a6efb8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2451,7 +2451,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "697f7e6a",
+   "id": "5f51d572",
    "metadata": {},
    "outputs": [
     {
@@ -2478,7 +2478,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "b4953d85",
+   "id": "67f1d61f",
    "metadata": {},
    "outputs": [
     {
@@ -2597,7 +2597,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "2c35191c",
+   "id": "8154d12e",
    "metadata": {},
    "outputs": [
     {
@@ -2715,7 +2715,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "a0cc0c84",
+   "id": "83141d9b",
    "metadata": {},
    "outputs": [
     {
@@ -2737,7 +2737,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "df7ee0be",
+   "id": "356ff35b",
    "metadata": {},
    "outputs": [
     {
@@ -2769,7 +2769,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "219a7ca8",
+   "id": "adc01689",
    "metadata": {},
    "outputs": [
     {
@@ -2796,7 +2796,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "5145ed2b",
+   "id": "ba295d57",
    "metadata": {},
    "outputs": [
     {
@@ -2881,7 +2881,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "c9371c3d",
+   "id": "e0f74613",
    "metadata": {},
    "outputs": [
     {
@@ -2904,7 +2904,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "45a02d25",
+   "id": "1830bfc0",
    "metadata": {},
    "outputs": [
     {
@@ -3073,7 +3073,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "83523c9c",
+   "id": "5cc465d4",
    "metadata": {},
    "outputs": [
     {
@@ -3106,7 +3106,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "42cef8d7",
+   "id": "1233324a",
    "metadata": {},
    "outputs": [
     {
@@ -3130,7 +3130,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "910d7d99",
+   "id": "79c1c560",
    "metadata": {},
    "outputs": [
     {
@@ -3152,7 +3152,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "ae7fd2f6",
+   "id": "b0ed6f36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3163,7 +3163,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "3f2aaab9",
+   "id": "2ebd33d9",
    "metadata": {},
    "outputs": [
     {
@@ -3450,7 +3450,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "1c882e2e",
+   "id": "abce9f7d",
    "metadata": {},
    "outputs": [
     {
@@ -3575,7 +3575,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "6f27c2b9",
+   "id": "831f7569",
    "metadata": {},
    "outputs": [
     {
@@ -3699,7 +3699,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "0ddb5958",
+   "id": "39b76c69",
    "metadata": {},
    "outputs": [
     {
@@ -4064,7 +4064,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "f4b50039",
+   "id": "997ed021",
    "metadata": {},
    "outputs": [
     {
@@ -4428,7 +4428,7 @@
   {
    "cell_type": "code",
    "execution_count": 142,
-   "id": "a2498ae3",
+   "id": "991885cf",
    "metadata": {},
    "outputs": [
     {
@@ -4727,7 +4727,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "addc7957",
+   "id": "85c5410f",
    "metadata": {},
    "outputs": [
     {
@@ -4753,8 +4753,71 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 144,
+   "id": "9dc51441",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# convert the datatypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "id": "154fdc33",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('float64')"
+      ]
+     },
+     "execution_count": 145,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.sepal_length.dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "id": "55cc4c65",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      4.9\n",
+       "1      4.7\n",
+       "2      4.6\n",
+       "3      5.0\n",
+       "4      5.4\n",
+       "      ... \n",
+       "144    6.7\n",
+       "145    6.3\n",
+       "146    6.5\n",
+       "147    6.2\n",
+       "148    5.9\n",
+       "Name: sepal_length, Length: 149, dtype: object"
+      ]
+     },
+     "execution_count": 146,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.sepal_length.astype('str')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "4cae0a4e",
+   "id": "cdc99727",
    "metadata": {},
    "outputs": [],
    "source": []
