--- a/Pandas/Pandas_Intro.ipynb
+++ b/Pandas/Pandas_Intro.ipynb
@@ -1227,7 +1227,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "72922bcc",
+   "id": "b37357db",
    "metadata": {},
    "outputs": [
     {
@@ -1396,7 +1396,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "36d3836a",
+   "id": "c072dfba",
    "metadata": {},
    "outputs": [
     {
@@ -1418,7 +1418,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "5c90be06",
+   "id": "7821dd30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1428,7 +1428,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "7f1733d7",
+   "id": "f25eadd8",
    "metadata": {},
    "outputs": [
     {
@@ -1452,7 +1452,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "4eb0499d",
+   "id": "444b11e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1463,7 +1463,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "7f8caa14",
+   "id": "7244a995",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1477,7 +1477,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "10466142",
+   "id": "f87a943e",
    "metadata": {},
    "outputs": [
     {
@@ -1631,7 +1631,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "8062be2d",
+   "id": "3291593d",
    "metadata": {},
    "outputs": [
     {
@@ -1657,7 +1657,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "2bdfb50b",
+   "id": "58c5d51d",
    "metadata": {},
    "outputs": [
     {
@@ -1764,7 +1764,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "acfcbe93",
+   "id": "5edd7009",
    "metadata": {
     "scrolled": true
    },
@@ -1908,7 +1908,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "be34220c",
+   "id": "f8738dbc",
    "metadata": {},
    "outputs": [
     {
@@ -2257,7 +2257,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "3a30c4d6",
+   "id": "a71f08b1",
    "metadata": {},
    "outputs": [
     {
@@ -2412,7 +2412,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "a39220ea",
+   "id": "8987e2a8",
    "metadata": {},
    "outputs": [
     {
@@ -2440,7 +2440,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "25a6efb8",
+   "id": "7b187d2e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2451,7 +2451,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "5f51d572",
+   "id": "131b8c3e",
    "metadata": {},
    "outputs": [
     {
@@ -2478,7 +2478,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "67f1d61f",
+   "id": "799456e3",
    "metadata": {},
    "outputs": [
     {
@@ -2597,7 +2597,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "8154d12e",
+   "id": "39d72e74",
    "metadata": {},
    "outputs": [
     {
@@ -2715,7 +2715,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "83141d9b",
+   "id": "ba903025",
    "metadata": {},
    "outputs": [
     {
@@ -2737,7 +2737,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "356ff35b",
+   "id": "3f923a76",
    "metadata": {},
    "outputs": [
     {
@@ -2769,7 +2769,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "adc01689",
+   "id": "22ea3ef3",
    "metadata": {},
    "outputs": [
     {
@@ -2796,7 +2796,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "ba295d57",
+   "id": "b151fbd1",
    "metadata": {},
    "outputs": [
     {
@@ -2881,7 +2881,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "e0f74613",
+   "id": "e55d0550",
    "metadata": {},
    "outputs": [
     {
@@ -2904,7 +2904,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "1830bfc0",
+   "id": "ea05d558",
    "metadata": {},
    "outputs": [
     {
@@ -3073,7 +3073,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "5cc465d4",
+   "id": "e2b965a0",
    "metadata": {},
    "outputs": [
     {
@@ -3106,7 +3106,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "1233324a",
+   "id": "83b7ec07",
    "metadata": {},
    "outputs": [
     {
@@ -3130,7 +3130,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "79c1c560",
+   "id": "4da4d93c",
    "metadata": {},
    "outputs": [
     {
@@ -3152,7 +3152,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "b0ed6f36",
+   "id": "9cacca3a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3163,7 +3163,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "2ebd33d9",
+   "id": "b50a2e58",
    "metadata": {},
    "outputs": [
     {
@@ -3450,7 +3450,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "abce9f7d",
+   "id": "2e75a77b",
    "metadata": {},
    "outputs": [
     {
@@ -3575,7 +3575,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "831f7569",
+   "id": "3f861609",
    "metadata": {},
    "outputs": [
     {
@@ -3699,7 +3699,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "39b76c69",
+   "id": "62759528",
    "metadata": {},
    "outputs": [
     {
@@ -4064,7 +4064,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "997ed021",
+   "id": "2c34545b",
    "metadata": {},
    "outputs": [
     {
@@ -4428,7 +4428,7 @@
   {
    "cell_type": "code",
    "execution_count": 142,
-   "id": "991885cf",
+   "id": "b6f45bd7",
    "metadata": {},
    "outputs": [
     {
@@ -4727,7 +4727,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "85c5410f",
+   "id": "12f304b3",
    "metadata": {},
    "outputs": [
     {
@@ -4754,7 +4754,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "9dc51441",
+   "id": "272f0a05",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4764,7 +4764,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "154fdc33",
+   "id": "b20ca323",
    "metadata": {},
    "outputs": [
     {
@@ -4784,43 +4784,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
-   "id": "55cc4c65",
+   "execution_count": 148,
+   "id": "ad9f8701",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.sepal_length = df.sepal_length.astype('str')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "id": "cb4efb29",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0      4.9\n",
-       "1      4.7\n",
-       "2      4.6\n",
-       "3      5.0\n",
-       "4      5.4\n",
-       "      ... \n",
-       "144    6.7\n",
-       "145    6.3\n",
-       "146    6.5\n",
-       "147    6.2\n",
-       "148    5.9\n",
-       "Name: sepal_length, Length: 149, dtype: object"
+       "dtype('O')"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.sepal_length.astype('str')"
+    "df.sepal_length.dtype"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "cdc99727",
+   "execution_count": 153,
+   "id": "cae7ba0d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sepal_length     object\n",
+       "sepal_width     float64\n",
+       "petal_length    float64\n",
+       "petal_width     float64\n",
+       "flower_type      object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 153,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "id": "c081fa77",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.sepal_width = df.sepal_width.astype(np.float16)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "id": "5ac49c1f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sepal_length     object\n",
+       "sepal_width     float16\n",
+       "petal_length    float64\n",
+       "petal_width     float64\n",
+       "flower_type      object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 155,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.dtypes"
+   ]
   }
  ],
  "metadata": {
